Add additional bars and restaurants

--- a/app/views/practical/venue.html
+++ b/app/views/practical/venue.html
@@ -81,13 +81,15 @@
                 <ul class="linkList">
                     <li><a href="http://www.taketwo.be">Taketwo</a> (0km)</li>
                     <li><a href="http://www.matiate.be">Matiate Kinepolis</a> (0km)</li>
-                    <li><a href="http://www.lapipedanvers.be">La Pipe d'Anvers (2km)</a></li>
+                    <li><a href="http://www.lapipedanvers.be">La Pipe d'Anvers</a> (2km)</li>
+                    <li><a href="http://www.burgerij.be/mas.php">De Burgerij</a> (3km)</li>
                     <li><a href="http://www.cafedenengel.be">Den Engel</a> (4km)</li>
                     <li><a href="http://www.biercentral.be">Bier Central</a> (4km)</li>
                     <li><a href="http://www.kellys.be">Kelly's Irish Pub</a> (4km)</li>
-                    <li><a href="http://www.patersvaetje.be">Paters Vaetje (5km)</a></li>
+                    <li><a href="http://www.patersvaetje.be">Paters Vaetje</a> (5km)</li>
                     <li><a href="http://www.zaowang.be">Zao Wang</a> (sushi) (5km)</li>
                     <li><a href="https://plus.google.com/101699409585700684059">Kulminator</a> (5km)</li>
+                    <li><a href="http://www.cityzine.be/en/gidsen/antwerp/bars+nightlife/chatleroi">Chatleroi</a> (6km)</li>
                 </ul>
 
             </div>
