Added event types FAQ item

--- a/app/views/practical/faq.html
+++ b/app/views/practical/faq.html
@@ -35,10 +35,21 @@
                         <p>
                             Devoxx University is 350 Euro (2 days)<br>
                             Devoxx Conference is 470 Euro (3 days)<br>
-                            Devoxx Combi ticket is 700 Euro (5 days)<br>
+                            Devoxx Combi ticket is 725 Euro (5 days)<br>
                             All prices are excluding 21% VAT<br>
                             Every attendee receives full access to the Devoxx 2013 channel on <a href="http://www.parleys.com/channel/5148921d0364bc17fc56adf0/presentations">Parleys.com</a>!</p>
                         </div>
+
+                    <h4 class="acco_title">Event Types</h4>
+                    <div class="acco_content">
+                        <p>Conference talks are 50 minutes presentations</p>
+                        <p>University talks are in depth presentations of 3 hours (= 75m + 30m break + 75m)</p>
+                        <p>Tools in Action are 30 minutes presentations demonstrating a programming tool</p>
+                        <p>Hands-on Labs are 3 hour hands-on sessions (*)</p>
+                        <p>Quickie are short 15 minute presentations during Lunch breaks (*)</p>
+                        <p>BOF sessions are 60 minutes long, scheduled in the evening and are informal (*)</p>
+                        <p>(*) Not recorded for Parleys.com</p>
+                    </div>
 
                     <h4 class="acco_title">Twitter</h4>
                     <div class="acco_content">
