--- a/app/views/practical/faq.html
+++ b/app/views/practical/faq.html
@@ -42,13 +42,14 @@
 
                     <h4 class="acco_title">Event Types</h4>
                     <div class="acco_content">
-                        <p>Conference talks are 50 minutes presentations</p>
-                        <p>University talks are in depth presentations of 3 hours (= 75m + 30m break + 75m)</p>
-                        <p>Tools in Action are 30 minutes presentations demonstrating a programming tool</p>
-                        <p>Hands-on Labs are 3 hour hands-on sessions (*)</p>
-                        <p>Quickie are short 15 minute presentations during Lunch breaks (*)</p>
-                        <p>BOF sessions are 60 minutes long, scheduled in the evening and are informal (*)</p>
-                        <p>(*) Not recorded for Parleys.com</p>
+                        <p>
+                            Conference talks are 50 minutes presentations (*)<br>
+                            University talks are in depth presentations of 3 hours (= 75m + 30m break + 75m) (*)<br>
+                            Tools in Action are 30 minutes presentations demonstrating a programming tool (*)<br>
+                            Hands-on Labs are 3 hour hands-on sessions<br>
+                            Quickie are short 15 minute presentations during Lunch breaks<br>
+                            BOF sessions are 60 minutes long, scheduled in the evening and are informal<br><br>
+                            (*) Recorded for Parleys.com</p>
                     </div>
 
                     <h4 class="acco_title">Twitter</h4>
