--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -196,11 +196,12 @@
     <div class="popup">
         <h4>Alex Van Boxel</h4>
 
-        <p></p>
+        <p>Java roasted since more than a decade. Loving each byte code</p>
 
         <div class="links clearfix">
             <a href="http://be.linkedin.com/in/alexvanboxel" class="btn_linkedin">LinkedIn</a>
             <a href="https://twitter.com/alexvb" class="btn_twitter">Twitter</a>
+            <a href="mailto:alex@vanboxel.be" class="btn_mail">Mail me</a>
         </div>
     </div>
 </li>
