--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -212,7 +212,7 @@
     <div class="popup">
         <h4>Sam Buls</h4>
 
-        <p></p>
+        <p>PhD student and Research Engineer in Additive Manufacturing (3D printing) at KU Leuven</p>
 
         <div class="links clearfix">
             <a href="http://be.linkedin.com/pub/sam-buls/19/118/a45" class="btn_linkedin">LinkedIn</a>
