--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -116,7 +116,7 @@
     <div class="popup">
         <h4>Stephan Janssen</h4>
 
-        <p>Founder of BeJUG, JavaPolis, Devoxx, Parleys.com</p>
+        <p>Founder of BeJUG, JavaPolis, Devoxx(4Kids), Parleys.com</p>
 
         <div class="links clearfix">
             <a href="http://be.linkedin.com/in/stephanjanssen" class="btn_linkedin">LinkedIn</a>
