Updated paths of images

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,7 +2,7 @@
     <ul>
         <li>
             <div class="grid">
-                <div class="row">           
+                <div class="row">
                     <div class="col9 content">
                         <h1>Born to be</h1>
                         <h3>November 11-15 2013</h3>
@@ -11,14 +11,14 @@
                     </div>
                     <div class="col11">
                         <img src="images_dummy/slide_01.png" class="visual" alt="Be born again">
-                    
+
                     </div>
                 </div>
-            </div>                  
+            </div>
         </li>
         <li>
             <div class="grid">
-                <div class="row">           
+                <div class="row">
                     <div class="col9 content">
                         <h1>Call for Presentations</h1>
                         <h3>Speak @Devoxx</h3>
@@ -29,71 +29,71 @@
                         <img src="images_dummy/slide_02.png" class="visual" alt="Be born again">
                     </div>
                 </div>
-                
-            </div>                  
+
+            </div>
         </li>
         <li>
             <div class="grid">
-            
-                <div class="row">           
+
+                <div class="row">
                     <div class="col9 content">
-                                                
+
                         <h1>Let's talk Java</h1>
                         <h3>Tracks 2013</h3>
                         <p>Java is at the roots of this conference, come learn about what's new in Java SE/EE, JSRs, JDK8, modularity and much more at Devoxx</p>
                         <a href="#/tracks" scroll="tracks" class="btn">All tracks</a>
-                        
+
                     </div>
                     <div class="col11">
-                    
+
                         <img src="images_dummy/slide_java.png" class="visual" alt="Be born again">
-                    
+
                     </div>
                 </div>
-                
-            </div>                  
+
+            </div>
         </li>
         <li>
             <div class="grid">
-            
-                <div class="row">           
+
+                <div class="row">
                     <div class="col9 content">
-                    
+
                         <h1>What's new in Android</h1>
                         <h3>Tracks 2013</h3>
                         <p>Android is the largest mobile platform in use today, come learn about the latest updates from Googlers or passionate member of it's ever growing community</p>
                         <a href="#/" class="btn" scroll="tracks">All tracks</a>
-                        
+
                     </div>
                     <div class="col11">
-                    
+
                         <img src="images_dummy/slide_android.png" class="visual" alt="Be born again">
-                    
+
                     </div>
                 </div>
-                
-            </div>                  
+
+            </div>
         </li>
         <li>
             <div class="grid">
-            
-                <div class="row">           
+
+                <div class="row">
                     <div class="col9 content">
-                    
+
                         <h1>What you didn't know about HTML5</h1>
                         <h3>Tracks 2013</h3>
                         <p>Learn about the new breed of JS web frameworks, the new features in HTML5, CSS3, JavaScript.next, the power of node.js and all it's libraries and tools that make web development productive and fun</p>
                         <a href="#/" class="btn" scroll="tracks">All tracks</a>
-                        
+
                     </div>
                     <div class="col11">
-                    
+
                         <img src="images_dummy/slide_html5.png" class="visual" alt="Be born again">
-                    
+
                     </div>
                 </div>
-                
-            </div>                  
+
+            </div>
         </li>
 </div>
 
@@ -111,7 +111,7 @@
                     <div class="description">Presentations</div>
                 </div>
                 <div class="map">
-                    <img src="../images/home_about_map.png" alt="map" />
+                    <img src="images/home_about_map.png" alt="map" />
                     <a href="#home" class="btn_be"><span>Belgium</span></a>
                     <a href="http://www.devoxx.com/display/FR13/Accueil" class="btn_fr"><span>France</span></a>
                     <a href="http://www.devoxx.com/display/UK13/Home" class="btn_uk"><span>United Kingdom</span></a>
@@ -124,7 +124,7 @@
             </div>
         </div>
     </div>
-</div> 
+</div>
 
 <div id="news" class="area white">
     <h2>Latest news</h2>
@@ -132,7 +132,7 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
-                <a href="http://www.devoxx.com/display/4KIDSNL/Home"><img src="../images/news/d4kids_nl.png" alt=""></a>
+                <a href="http://www.devoxx.com/display/4KIDSNL/Home"><img src="images/news/d4kids_nl.png" alt=""></a>
                     <div class="date">8 June '13</div>
                     <h4>Devoxx4Kids NL</h4>
                     <p>The first <a href="http://www.devoxx.com/display/4KIDSNL/Home">Dutch Devoxx4Kids</a> event, organized
@@ -141,7 +141,7 @@
                         <br><a href="http://www.devoxx.com/display/4KIDSNL/Home">Read more...</a></p>
             </li>
             <li>
-                <a href="#about"><img src="../images/news/site.png" alt=""></a>
+                <a href="#about"><img src="images/news/site.png" alt=""></a>
                     <div class="date">6 June '13</div>
                     <h4>New site</h4>
                     <p>Hope you like our brand new website?<br>It's built using AngularJS and the call for papers is available on
@@ -151,7 +151,7 @@
             </li>
             <li>
 
-                    <img src="../images/news/call4papers.png" alt="Call For Papers" />
+                    <img src="images/news/call4papers.png" alt="Call For Papers" />
                     <div class="date">6 June '13</div>
                     <h4>Call For Papers Now Open</h4>
                     <p>The CFP for Devoxx Belgium 2013 is now open and closes July 5th.
@@ -160,7 +160,7 @@
             </li>
             <li>
                 <!--<a href="#">-->
-                    <img src="../images/news/registration.png" alt="Devoxx Registrations" />
+                    <img src="images/news/registration.png" alt="Devoxx Registrations" />
                     <div class="date">6 June '13</div>
                     <h4>Registrations Open Soon</h4>
                     <p>As always we under-estimated the work on our new website including the new Call For Papers module.
@@ -169,7 +169,7 @@
             </li>
             <li>
                 <!--<a href="#">-->
-                    <img src="../images/news/borntobe.png" alt="Born To Be" />
+                    <img src="images/news/borntobe.png" alt="Born To Be" />
                 <div class="date">6 June '13</div>
                     <h4>New Devoxx Theme</h4>
                     <p>The majority of the Devoxxians are "Born to be..." a developer and many tell us they actually feel reborn after attending Devoxx.  :)</p>
@@ -178,7 +178,7 @@
 
             <li>
                 <a href="http://www.devoxx.com/display/UK13/Home">
-                <img src="../images/news/DevoxxUK-2013.jpg" alt="The Devoxx UK team" />
+                <img src="images/news/DevoxxUK-2013.jpg" alt="The Devoxx UK team" />
                 <div class="date">29 March '13</div>
                 <h4>First Devoxx UK</h4>
                 <p>The inaugural Devoxx UK, about 500 developers experienced the Devoxx atmosphere in London. More than enough to call it a success, but more info about this later.
@@ -187,27 +187,27 @@
             </li>
             <li>
                 <a href="http://www.devoxx.com/display/FR13/Accueil">
-                <img src="../images/news/DevoxxFR-2013.jpg" alt="The Devoxx FR team" />
+                <img src="images/news/DevoxxFR-2013.jpg" alt="The Devoxx FR team" />
                 <div class="date">28 March '13</div>
                 <h4>Devoxx FR on rails</h4>
                 <p>The second Devoxx France edition was a blast, close to 1500 'Frenchy' developers landed in Paris for a week of Devoxx geekery. The demand for Devoxx FR tickets is so high that we'll need to find a bigger venue next year.
                 </p>
                 </a>
-            </li>            
+            </li>
             <li>
                 <a href="#/team">
-                <img src="../images/news/team.png" alt="The Devoxx BE team" />
+                <img src="images/news/team.png" alt="The Devoxx BE team" />
                 <div class="date">23 Feb '13</div>
                 <h4>The Devoxx Team</h4>
                 <p>The international Devoxx team has already been working hard behind the scenes.
                    Our batteries are again fully charged to organise another great Devoxx experience for you!
                 </p>
                 </a>
-            </li>            
+            </li>
         </ul>
     </div>
 </div>
-        
+
 <div id="tracks" class="area orange">
     <div class="grid">
         <div class="row">
@@ -216,7 +216,7 @@
                 <ul class="dotList" id="trackList">
                     <li>
                         <div class="icon">
-                            <img src="../images/tracks/icon_web.png" alt="Web and HTML5" />
+                            <img src="images/tracks/icon_web.png" alt="Web and HTML5" />
                         </div>
                         <h4>Web &amp; HTML5</h4>
                         <div class="popup">
@@ -226,7 +226,7 @@
                     </li>
                     <li>
                         <div class="icon">
-                            <img src="../images/tracks/icon_cloud.png" alt="Cloud and Big Data" />
+                            <img src="images/tracks/icon_cloud.png" alt="Cloud and Big Data" />
                         </div>
                         <h4>Cloud &amp; Big Data</h4>
                         <div class="popup">
@@ -236,7 +236,7 @@
                     </li>
                     <li>
                         <div class="icon">
-                            <img src="../images/tracks/icon_javaee.png" alt="JaveEE" />
+                            <img src="images/tracks/icon_javaee.png" alt="JaveEE" />
                         </div>
                         <h4>JavaEE</h4>
                         <div class="popup">
@@ -246,7 +246,7 @@
                     </li>
                     <li>
                         <div class="icon">
-                            <img src="../images/tracks/icon_future.png" alt="Future at Devoxx" />
+                            <img src="images/tracks/icon_future.png" alt="Future at Devoxx" />
                         </div>
                         <h4>Future&lt;Devoxx&gt;</h4>
                         <div class="popup">
@@ -256,7 +256,7 @@
                     </li>
                     <li>
                         <div class="icon">
-                            <img src="../images/tracks/icon_mobile.png" alt="Mobile" />
+                            <img src="images/tracks/icon_mobile.png" alt="Mobile" />
                         </div>
                         <h4>Mobile</h4>
                         <div class="popup">
@@ -266,7 +266,7 @@
                     </li>
                     <li>
                         <div class="icon">
-                            <img src="../images/tracks/icon_alternative.png" alt="Alternative Languages on the JVM" />
+                            <img src="images/tracks/icon_alternative.png" alt="Alternative Languages on the JVM" />
                         </div>
                         <h4>JVM Languages</h4>
                         <div class="popup">
@@ -276,7 +276,7 @@
                     </li>
                     <li>
                         <div class="icon">
-                            <img src="../images/tracks/icon_javase.png" alt="JavaSE" />
+                            <img src="images/tracks/icon_javase.png" alt="JavaSE" />
                         </div>
                         <h4>JavaSE</h4>
                         <div class="popup">
@@ -286,7 +286,7 @@
                     </li>
                     <li>
                         <div class="icon">
-                            <img src="../images/tracks/icon_methology.png" alt="Methodology" />
+                            <img src="images/tracks/icon_methology.png" alt="Methodology" />
                         </div>
                         <h4>Methodology</h4>
                         <div class="popup">
@@ -296,7 +296,7 @@
                     </li>
                     <li>
                         <div class="icon">
-                            <img src="../images/tracks/icon_architecture.png" alt="Architecture and Security" />
+                            <img src="images/tracks/icon_architecture.png" alt="Architecture and Security" />
                         </div>
                         <h4>Arch. &amp; Security</h4>
                         <div class="popup">
