--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -61,7 +61,7 @@
 
 <ul class="dotList" id="contactList">
 <li class="Program CFP Devices Social">
-    <div class="icon" style="background: url('../../images/team/JoVoordeckers.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/JoVoordeckers.jpg') no-repeat center;"></div>
     <h4>Jo Voordeckers</h4>
 
     <div class="popup">
@@ -77,7 +77,7 @@
     </div>
 </li>
 <li class="Program CFP">
-    <div class="icon" style="background: url('../../images/team/JanKeesVanAndel.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/JanKeesVanAndel.jpg') no-repeat center;"></div>
     <h4>Jan-Kees Van Andel</h4>
 
     <div class="popup">
@@ -93,7 +93,7 @@
     </div>
 </li>
 <li class="Program Devices">
-    <div class="icon" style="background: url('../../images/team/GertLeenders.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/GertLeenders.jpg') no-repeat center;"></div>
     <h4>Gert Leenders</h4>
 
     <div class="popup">
@@ -110,7 +110,7 @@
     </div>
 </li>
 <li class="Admin Program CFP">
-    <div class="icon" style="background: url('../../images/team/StephanJanssen.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/StephanJanssen.jpg') no-repeat center;"></div>
     <h4>Stephan Janssen</h4>
 
     <div class="popup">
@@ -126,7 +126,7 @@
     </div>
 </li>
 <li class="Program Social">
-    <div class="icon" style="background: url('../../images/team/TimPeeters.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/TimPeeters.jpg') no-repeat center;"></div>
     <h4>Tim Peeters</h4>
 
     <div class="popup">
@@ -143,7 +143,7 @@
     </div>
 </li>
 <li class="Program">
-    <div class="icon" style="background: url('../../images/team/LouisJacomet.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/LouisJacomet.jpg') no-repeat center;"></div>
     <h4>Louis Jacomet</h4>
 
     <div class="popup">
@@ -158,7 +158,7 @@
     </div>
 </li>
 <li class="Admin">
-    <div class="icon" style="background: url('../../images/team/KristienLeyn.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/KristienLeyn.jpg') no-repeat center;"></div>
     <h4>Kristien Leyn</h4>
 
     <div class="popup">
@@ -173,7 +173,7 @@
     </div>
 </li>
 <li class="Program Devices">
-    <div class="icon" style="background: url('../../images/team/JohanVos.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/JohanVos.jpg') no-repeat center;"></div>
     <h4>Johan Vos</h4>
 
     <div class="popup">
@@ -190,7 +190,7 @@
     </div>
 </li>
 <li class="Program Devices">
-    <div class="icon" style="background: url('../../images/team/AlexVanBoxel.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/AlexVanBoxel.jpg') no-repeat center;"></div>
     <h4>Alex Van Boxel</h4>
 
     <div class="popup">
@@ -206,7 +206,7 @@
     </div>
 </li>
 <li class="Program Devices">
-    <div class="icon" style="background: url('../../images/team/SamBuls.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/SamBuls.jpg') no-repeat center;"></div>
     <h4>Sam Buls</h4>
 
     <div class="popup">
@@ -220,7 +220,7 @@
     </div>
 </li>
 <li class="Program">
-    <div class="icon" style="background: url('../../images/team/StijnVanDenEnde.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/StijnVanDenEnde.jpg') no-repeat center;"></div>
     <h4>Stijn van den Ende</h4>
 
     <div class="popup">
@@ -234,7 +234,7 @@
     </div>
 </li>
 <li class="Program">
-    <div class="icon" style="background: url('../../images/team/LucDuponcheel.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/LucDuponcheel.jpg') no-repeat center;"></div>
     <h4>Luc Duponcheel</h4>
 
     <div class="popup">
@@ -249,7 +249,7 @@
     </div>
 </li>
 <li class="Program">
-    <div class="icon" style="background: url('../../images/team/DanielDeluca.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/DanielDeluca.jpg') no-repeat center;"></div>
     <h4>Daniel Deluca</h4>
 
     <div class="popup">
@@ -265,7 +265,7 @@
     </div>
 </li>
 <li class="Program">
-    <div class="icon" style="background: url('../../images/team/DavidDelabassee.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/DavidDelabassee.jpg') no-repeat center;"></div>
     <h4>David Delabassee</h4>
 
     <div class="popup">
@@ -281,7 +281,7 @@
     </div>
 </li>
 <li class="Program">
-    <div class="icon" style="background: url('../../images/team/DanHardiker.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/DanHardiker.jpg') no-repeat center;"></div>
     <h4>Dan Hardiker</h4>
 
     <div class="popup">
@@ -297,7 +297,7 @@
     </div>
 </li>
 <li class="Program">
-    <div class="icon" style="background: url('../../images/team/TashaCarl.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/TashaCarl.jpg') no-repeat center;"></div>
     <h4>Tasha Carl</h4>
 
     <div class="popup">
@@ -313,7 +313,7 @@
     </div>
 </li>
 <li class="Program">
-    <div class="icon" style="background: url('../../images/team/StephenChin.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/StephenChin.jpg') no-repeat center;"></div>
     <h4>Stephen Chin</h4>
 
     <div class="popup">
@@ -330,7 +330,7 @@
     </div>
 </li>
 <li class="Program Mobile">
-    <div class="icon" style="background: url('../../images/team/PeterKuterna.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/PeterKuterna.jpg') no-repeat center;"></div>
     <h4>Peter Kuterna</h4>
 
     <div class="popup">
@@ -346,7 +346,7 @@
     </div>
 </li>
 <li class="Program">
-    <div class="icon" style="background: url('../../images/team/AlexisPouchkine.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/AlexisPouchkine.jpg') no-repeat center;"></div>
     <h4>Alexis Moussine-Pouchkine</h4>
 
     <div class="popup">
@@ -361,7 +361,7 @@
     </div>
 </li>
 <li class="Program Devices">
-    <div class="icon" style="background: url('../../images/team/HansCapelle.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/HansCapelle.jpg') no-repeat center;"></div>
     <h4>Hans Capelle</h4>
 
     <div class="popup">
@@ -377,7 +377,7 @@
     </div>
 </li>
 <li class="Program Mobile CFP">
-    <div class="icon" style="background: url('../../images/team/MikeSeghers.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/MikeSeghers.jpg') no-repeat center;"></div>
     <h4>Mike Seghers</h4>
 
     <div class="popup">
@@ -393,7 +393,7 @@
     </div>
 </li>
 <li class="CFP">
-    <div class="icon" style="background: url('../../images/team/CyrilLakech.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/CyrilLakech.jpg') no-repeat center;"></div>
     <h4>Cyril Lakech</h4>
 
     <div class="popup">
@@ -409,7 +409,7 @@
     </div>
 </li>
 <li class="Media">
-    <div class="icon" style="background: url('../../images/team/RoyVanRijn.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/RoyVanRijn.jpg') no-repeat center;"></div>
     <h4>Roy Van Rijn</h4>
 
     <div class="popup">
@@ -424,7 +424,7 @@
     </div>
 </li>
 <li class="Program">
-    <div class="icon" style="background: url('../../images/team/StevenNoels.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/StevenNoels.jpg') no-repeat center;"></div>
     <h4>Steven Noels</h4>
 
     <div class="popup">
@@ -439,7 +439,7 @@
     </div>
 </li>
 <li class="Program">
-    <div class="icon" style="background: url('../../images/team/GeertVanlandegem.jpg') no-repeat center;"></div>
+    <div class="icon" style="background: url('images/team/GeertVanlandegem.jpg') no-repeat center;"></div>
     <h4>Geert Van Landeghem</h4>
 
     <div class="popup">
