Updated paths of images

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -14,7 +14,7 @@
             <div class="col11">
 
                 <a href="https://github.com/devoxx">
-                    <img src="../../images/github.png" class="visual" alt="" />
+                    <img src="images/github.png" class="visual" alt="" />
                 </a>
 
             </div>
