--- a/app/views/practical/venue.html
+++ b/app/views/practical/venue.html
@@ -10,7 +10,7 @@
             </div>
             <div class="col11">
 
-                <img src="../../images/topinfo_location_visual.png" class="visual" alt="" />
+                <img src="images/topinfo_location_visual.png" class="visual" alt="" />
 
             </div>
         </div>
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col4">
 
-                <img src="../../images/pin_place.png" class="pin" alt="" />
+                <img src="images/pin_place.png" class="pin" alt="" />
 
             </div>
             <div class="col5 push1">
@@ -40,7 +40,7 @@
 
             </div>
             <div class="col5">
-                <img src="../../images/metropolis.png" width="400">
+                <img src="images/metropolis.png" width="400">
             </div>
         </div>
 
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="col4">
 
-                <img src="../../images/pin_hotel.png" class="pin" alt="" />
+                <img src="images/pin_hotel.png" class="pin" alt="" />
 
             </div>
             <div class="col5 push1">
@@ -71,7 +71,7 @@
             </div>
             <div class="col4">
 
-                <img src="../../images/pin_resto.png" class="pin" alt="" />
+                <img src="images/pin_resto.png" class="pin" alt="" />
 
             </div>
             <div class="col5 push1">
