--- a/app/views/speaker/proposals.html
+++ b/app/views/speaker/proposals.html
@@ -10,7 +10,7 @@
 
             <div class="col6">
 
-                <img src="../../images/proposal_icon.png" class="visual" alt="" />
+                <img src="images/proposal_icon.png" class="visual" alt="" />
 
             </div>
         </div>
