--- a/app/views/speaker/proposals.html
+++ b/app/views/speaker/proposals.html
@@ -26,10 +26,10 @@
                 <h4>Submit New Proposal</h4>
             </div>
             <div class="col6">
-                <div ng-controller="Speaker_ProposalsCtrl" ng-cloak>
+                <div ng-cloak>
                     <a href="#/speaker/proposal/new" class="btn btn-primary">New</a>
                 </div>
-            </div>
+           </div>
         </div>
     </div>
 </div>
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col20">
                 <h4>Existing Proposals</h4>
-                <div ng-controller="Speaker_ProposalsCtrl" ng-cloak>
+                <div ng-cloak>
                     <h4 ng-show="!model.myProposals">Loading...</h4>
                     <h4 ng-show="model.myProposals.length == 0">You have no proposals</h4>
                     <table class="table" ng-show="model.myProposals.length > 0">
