fixed name Hans CaPPelle

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -362,10 +362,10 @@
 </li>
 <li class="Program Devices">
     <div class="icon" style="background: url('../../images/team/HansCapelle.jpg') no-repeat center;"></div>
-    <h4>Hans Capelle</h4>
+    <h4>Hans Cappelle</h4>
 
     <div class="popup">
-        <h4>Hans Capelle</h4>
+        <h4>Hans Cappelle</h4>
 
         <p>Independent Java & Android Developer at KBC Mobile Development Team</p>
 
