--- a/app/views/sponsors.html
+++ b/app/views/sponsors.html
@@ -97,13 +97,13 @@
                         <td>&nbsp;</td>
                     </tr>
                     <tr>
-                        <td class="tabletxt1">Newsletter</td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
-                        <td>&nbsp;</td>
+                        <td class="tabletxt1">Newsletter Insersts</td>
+                        <td align="center">3</td>
+                        <td align="center">2</td>
+                        <td align="center">1</td>
                     </tr>
                     <tr>
-                        <td class="tabletxt1">Branding on the Devoxx Website</td>
+                        <td class="tabletxt1">Logo on the Devoxx website footer (with link)</td>
                         <td align="center"><img src="images/carousel_pager.png" alt=""></td>
                         <td align="center"><img src="images/carousel_pager.png" alt=""></td>
                         <td align="center"><img src="images/carousel_pager.png" alt=""></td>
@@ -136,7 +136,7 @@
                         <td align="center">On Request</td>
                     </tr>
                     <tr>
-                        <th align="left" class="tablesub" colspan="6">Garanteed Speaking Slot</th>
+                        <th align="left" class="tablesub" colspan="6">Guaranteed Partner Speaking Slot</th>
                     </tr>
                     <tr>
                         <td class="tabletxt1">&nbsp;</td>
@@ -145,11 +145,17 @@
                         <td>Conference Bronze+</td>
                     </tr>
                     <tr>
+                        <td class="tabletxt1">Recorded for Parleys.com</td>
+                        <td align="center"><img style="padding-left: 10px;" src="images/carousel_pager.png" alt=""></td>
+                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                    </tr>
+                    <tr>
                         <th align="left" class="tablesub" colspan="6">Devoxx welcome bag</th>
                     </tr>
                     <tr>
                         <td class="tabletxt1">Item insert</td>
-                        <td align="center"><img src="images/carousel_pager.png" alt=""></td>
+                        <td align="center">1</td>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                     </tr>
