corrected links to sponsors on sponsors.html page

--- a/app/views/sponsors.html
+++ b/app/views/sponsors.html
@@ -34,21 +34,21 @@
         <div class="row gold">
             <div class="col5 push1">
 
-                <a href="#" target="_blank"><img src="images/sponsors/oracle.png" alt="Oracle"/></a>
+                <a href="http://www.oracle.com" target="_blank"><img src="images/sponsors/oracle.png" alt="Oracle"/></a>
 
                 <p>The steward of Java</p>
 
             </div>
             <div class="col5 push1">
 
-                <a href="#" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
+                <a href="http://www.jboss.com" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
 
                 <p>The open source Java EE application server</p>
 
             </div>
             <div class="col5 push1">
 
-                <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google"/></a>
+                <a href="http://www.google.com" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google"/></a>
 
                 <p>The search company behind Android and Chrome</p>
 
